--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
 	"description": "InfoSec project for freeCodeCamp",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"body-parser": "^1.15.2",
 		"chai": "^4.2.0",
-		"chai-http": "^3.0.0",
+		"chai-http": "^4.3.0",
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^9.2.2",
+		"mongodb": "^3.6.6",
+		"mongoose": "^5.12.7",
+		"nodemon": "^2.0.7"
 	},
 	"repository": {
 		"type": "git",
